MDEV-25093: Adaptive flushing fails to kick in even if             innodb_adaptive_flushing_lwm is hit. (possible regression)

adaptive flushing should kick in if
a. dirty_pct (dirty pages in buffer pool) > innodb_max_dirty_pages_pct_lwm
OR
b. innodb_adaptive_flushing_lwm limit is reached (default to 10%)

both conditions are mutually exclusive and whichever is first to evaluate
true should kick-start the adaptive flushing.

After recent changes to simplify the flushing algorithm logic, (b) got ignored
that introduced the said regression.